--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,10 @@ jobs:
     - name: Compile LaTeX document
       uses: xu-cheng/latex-action@v3
       with:
-        root_file: latex_resume/jaman-uddin.tex
+        root_file: resume/jaman-uddin.tex
         
     - name: Upload PDF
       uses: actions/upload-artifact@v4
       with:
         name: resume
-        path: latex_resume/jaman-uddin.pdf
+        path: resume/jaman-uddin.pdf
