--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
           sudo apt-get update
           sudo apt-get install -y aptitude
-          sudo aptiude update
+          sudo aptitude update
           sudo aptitude install -y texlive-latex-recommended texlive-fonts-recommended texlive-latex-extra
 
     - name: Compile LaTeX document
