--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - 'resume/**'
   schedule:
-    - cron: '0 2 * * 1-5' # Runs at 02:00 on every day-of-week from Monday through Friday
+    - cron: '*/24 * * * *' # Runs every 24 minutes
   workflow_dispatch:
 
 jobs:
