--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - 'resume/**'
   schedule:
-    - cron: '*/24 * * * *' # Runs every 24 minutes
+    - cron: '0 19 * * 1' # Runs every Monday at 19:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -42,12 +42,13 @@ jobs:
           pdftoppm resume/jaman-uddin.pdf resume/jaman-uddin -png -r 300
           mv resume/jaman-uddin-1.png resume/jaman-uddin.png
 
+    # Step 4: Configure Git user and email
     - name: Configure Git
       run: |
           git config --local user.email "zamaan.md19@gmail.com"
           git config --local user.name "RootProgrammer"
     
-    # Create a new branch and commit changes
+    # Step 5: Create a new branch and commit changes
     - name: Create a new branch and commit PDF and PNG
       run: |
         git checkout -b update-resume-$(date +%Y-%m-%d)
@@ -56,3 +57,14 @@ jobs:
         git push origin update-resume-$(date +%Y-%m-%d)
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    # Step 6: Create a Pull Request
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v6
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        commit-message: Update compiled resume PDF and PNG
+        title: "Automatically update compiled resume PDF and PNG"
+        body: "This is an auto-generated PR to update the compiled PDF and PNG files."
+        branch: update-resume-$(date +%Y-%m-%d) # Ensure this matches the branch created above
+        
