--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,21 +48,23 @@ jobs:
           git config --local user.email "zamaan.md19@gmail.com"
           git config --local user.name "RootProgrammer"
     
-    # Step 5: Update or Create Branch and Push Changes
+    # Step 5: Update or Create a Branch and Push Changes
     - name: Update or Create Branch and Push Changes
       run: |
-        BRANCH_EXISTS=$(git ls-remote --heads https://github.com/RootProgrammer/Resume update-resume-$(date +%Y-%m-%d) | wc -l)
-        if [ $BRANCH_EXISTS -eq 0 ]; then
+        # Fetch all branches from the remote to ensure git is aware of the branch if it exists
+        git fetch origin
+        # Attempt to checkout the branch if it exists, or create it if it doesn't
+        if git checkout update-resume-$(date +%Y-%m-%d); then
+          echo "Branch already exists. Checked out and pulling latest changes."
+          git pull origin update-resume-$(date +%Y-%m-%d)
+        else
           echo "Creating a new branch."
           git checkout -b update-resume-$(date +%Y-%m-%d)
-        else
-          echo "Branch already exists. Checking out and pulling latest changes."
-          git checkout update-resume-$(date +%Y-%m-%d)
-          git pull origin update-resume-$(date +%Y-%m-%d)
         fi
+        # Add changes
         git add resume/jaman-uddin.pdf resume/jaman-uddin.png
         git commit -m "Automatically update compiled resume PDF and PNG"
-        # Consider using --force-with-lease as a safer alternative to --force
+        # Push changes, using --force-with-lease as a safer alternative to --force
         git push --force-with-lease origin update-resume-$(date +%Y-%m-%d)
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
