--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ jobs:
     - name: Set up Git repository
       uses: actions/checkout@v4
 
+    - name: Set Dynamic Branch Name
+      run: echo "BRANCH_NAME=update-resume-$(date +%Y-%m-%d)" >> $GITHUB_ENV
+
     # Step 2: Compile the LaTeX document to PDF
     - name: Install LaTeX
       run: |
@@ -54,18 +57,18 @@ jobs:
         # Fetch all branches from the remote to ensure git is aware of the branch if it exists
         git fetch origin
         # Attempt to checkout the branch if it exists, or create it if it doesn't
-        if git checkout update-resume-$(date +%Y-%m-%d); then
+        if git checkout ${{ env.BRANCH_NAME }}; then
           echo "Branch already exists. Checked out and pulling latest changes."
-          git pull origin update-resume-$(date +%Y-%m-%d)
+          git pull origin ${{ env.BRANCH_NAME }}
         else
           echo "Creating a new branch."
-          git checkout -b update-resume-$(date +%Y-%m-%d)
+          git checkout -b ${{ env.BRANCH_NAME }}
         fi
         # Add changes
         git add resume/jaman-uddin.pdf resume/jaman-uddin.png
         git commit -m "Automatically update compiled resume PDF and PNG"
         # Push changes, using --force-with-lease as a safer alternative to --force
-        git push --force-with-lease origin update-resume-$(date +%Y-%m-%d)
+        git push --force-with-lease origin ${{ env.BRANCH_NAME }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -77,5 +80,5 @@ jobs:
         commit-message: Update compiled resume PDF and PNG
         title: "Automatically update compiled resume PDF and PNG"
         body: "This is an auto-generated PR to update the compiled PDF and PNG files."
-        branch: update-resume-$(date +%Y-%m-%d) # Ensure this matches the branch created above
+        branch: ${{ env.BRANCH_NAME }}
         
